@@ -69,7 +69,7 @@ GenerateAndrosynth (BYTE control)
 
 								pPSD = (PPLANETSIDE_DESC)pMenuState->ModuleFrame;
 								UnbatchGraphics ();
-								DoDiscoveryReport (pPSD->OldMenuSounds);
+								DoDiscoveryReport (MenuSounds);
 								BatchGraphics ();
 								pSolarSysState->SysInfo.PlanetInfo.DiscoveryString =
 										SetRelStringTableIndex (
